--- a/index.html
+++ b/index.html
@@ -28,7 +28,25 @@
     <div id="popupcontent"></div>
 
     <!-- query result -->
-    
+    <div id="queryresult">
+      <table id="qr_coords_table">
+        <caption>Clicked coordinates <div id="zoomtopoint" class="action-zoom zoombtn"></div></caption>
+        <tr><td id="qr_coords"></td></tr>
+      </table>
+
+      <table id="qr_layername_table">
+        <caption>Layer <div id="zoomtolayer" class="action-zoom zoombtn"></div></caption>
+        <tr><td id="qr_layername"></td></tr>
+      </table>
+
+      <table id="qr_attrs_table">
+        <caption>Attributes</caption>
+      </table>
+
+      <!-- camera actions and measure tool -->
+      <div id="orbitbtn" class="action-btn action-orbit">Orbit</div>
+      <div id="measurebtn" class="action-btn">Measure distance</div>
+    </div>
 
     <!-- page info -->
     <div id="pageinfo">
@@ -86,6 +104,9 @@
       <button type="button" 
               onclick="window.open('', '_self', ''); window.close();">Close window</button>
       
+    </div>
+    <div id="nar_b1c906d4" class="narcontent">
+      &nbsp;&nbsp;
     </div>
   </div>
   <div id="nextbtn"></div>
